# rocket-template

./: .env.example  Cargo.toml  Dockerfile  LICENSE  Rocket.toml  cloudbuild.yaml
development/: docker-compose.yml
doc/adr/: 0000-record-decisions.md  0001-how-to-keep-the-session.md
migrations/2020-12-27-131914_create_tasks/: down.sql  up.sql
migrations/2021-02-28-114257_create_users/: up.sql
migrations/2021-03-20-121846_add_created_at/: down.sql  up.sql
migrations/2021-04-17-132749_add_id_to_users/: down.sql  up.sql
migrations/2021-04-18-142517_add_user_id_to_tasks/: down.sql  up.sql
migrations/2021-10-16-123235_rename_uid_to_firebase_uid/: down.sql  up.sql
migrations/2021-11-03-120929_create_deleted_users/: down.sql  up.sql
public/: static_file.html
src/: config.rs  connection.rs  cors.rs  fairing.rs  fetch_jwks.rs  handlers.rs  id_token.rs  jwks.rs  log.rs  main.rs  models.rs  schema.rs  task.rs  user.rs
src/fairing/: cors.rs  jwks.rs  log.rs  migration.rs
src/firebase/: auth.rs
src/handlers/: auth.rs  cookies.rs  count.rs  features_i_tried.rs  params.rs  tasks.rs
src/models/: deleted_users.rs  tasks.rs  users.rs
src/models/deleted_users/: repository.rs
src/models/users/: from_request.rs  repository.rs
