[package]
name = "rocket-template-app"
version = "0.1.0"
authors = ["Kenta Mukai <r@muk.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "7"
reqwest = { version = "0.11", features = ["blocking", "json"] }

# connection pool
r2d2 = "0.8"

dotenv = "0.15.0"
once_cell = "1.5.2"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["serve", "json"]
